<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_color_second_corners_10"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/mark_pro_medium"
        android:gravity="end"
        android:text="@string/add_address"
        android:textColor="@color/second_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toStartOf="@+id/add_address_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/add_address_button"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/shape_color_main_corners_10"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button"
        app:srcCompat="@drawable/location_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/my_cart"
        android:textColor="@color/second_color"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_color_second_corners_top_left_right_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="@color/divider25"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro_bold"
        android:letterSpacing="-0.033"
        android:textColor="@color/white"
        android:layout_marginEnd="35dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView6"
        tools:text="$6,000 us" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delivery_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/mark_pro_bold"
        android:letterSpacing="-0.033"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/total_price_textview"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView5"
        tools:text="Free" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/mark_pro_regular"
        android:letterSpacing="-0.033"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/mark_pro_regular"
        android:letterSpacing="-0.033"
        android:text="@string/delivery"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="27dp"
        android:background="@color/divider20"
        app:layout_constraintBottom_toTopOf="@+id/checkout_button"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkout_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/mark_pro_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="-0.033"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>