<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="13dp"
    android:background="@drawable/shape_color_background_corners_30">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/product_name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/mark_pro_medium"
        android:letterSpacing="-0.033"
        android:textColor="@color/second_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/favourite_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Galaxy Note 20 Ultra" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/favourite_imageview"
        android:layout_width="37dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/shape_color_second_corners_10"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favourites_icon_14" />

    <com.willy.ratingbar.BaseRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@+id/product_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/product_name_textview"
        app:srb_clearRatingEnabled="true"
        app:srb_drawableEmpty="@drawable/star_empty"
        app:srb_drawableFilled="@drawable/star_filled"
        app:srb_isIndicator="true"
        app:srb_numStars="5"
        app:srb_starHeight="18dp"
        app:srb_starPadding="0dp"
        app:srb_starWidth="18dp"
        app:srb_stepSize="0.5" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/details_tablayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="27dp"
        app:tabPaddingBottom="10dp"
        app:tabRippleColor="@null"
        android:background="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:tabContentStart="40dp"
        app:tabIndicator="@drawable/custom_tab_indicator"
        app:tabIndicatorColor="@color/main_color"
        app:tabTextAppearance="@style/TabFont"
        app:tabSelectedTextColor="@color/second_color"
        app:tabTextColor="@color/tab_text_unselected">

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/shop" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/details"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/features"/>

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/details_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="9dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/details_tablayout"
        app:layout_constraintStart_toStartOf="@+id/details_tablayout"
        app:layout_constraintTop_toBottomOf="@id/details_tablayout" />

</androidx.constraintlayout.widget.ConstraintLayout>